# QtProject

./: info.txt
img/: map1.tmx  panneaux.tmx  tresor.tmx
sabiron/build-sabiron-Desktop_Qt_5_12_12_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  Qt.txt
sabiron/build-sabiron-Desktop_Qt_5_12_12_MinGW_64_bit-Debug/debug/: moc_MyScene.cpp  moc_mainwindow.cpp  qrc_ressources.cpp
sabiron/build-sabiron-Desktop_Qt_5_12_12_MinGW_64_bit-Release/: Makefile  Makefile.Debug  Makefile.Release
sabiron/build-sabiron-Desktop_Qt_5_12_12_MinGW_64_bit-Release/release/: moc_MyScene.cpp  moc_mainwindow.cpp  qrc_ressources.cpp
sabiron/sabiron/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MyScene.cpp  MyScene.h  PersoItem.cpp  PersoItem.h  includes.h  main.cpp  personnage.cpp  readme.md  ressources.qrc  sabiron.pro
